Apply suggestions from code review
Co-authored-by: ADmad <ADmad@users.noreply.github.com>

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -608,7 +608,7 @@ strong {
 }
 
 .c-sql-log-panel__entry .in-transaction {
-    background: var(--sql-log-transaction);
+    background: var(--cake-light-gray);
 }
 
 .c-toolbar {
